deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-test
  labels:
    app: eks-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-test
  template:
    metadata:
      labels:
        app: eks-test
    spec:
      containers:
      - name: eks-test
        image: eks-test-image:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
      restartPolicy: Never
